--- a/django_pic/index.html
+++ b/django_pic/index.html
@@ -59,7 +59,7 @@
     <div class="pic" style="background:url(img/4.png) no-repeat;background-size:contain"></div>
     <div class="info">
         <div class="title"><h3>首页上</h3></div>
-        <div class="msg">左边是一个商品分类，点击可跳转到响应种类。中间是一个轮播图</div>
+        <div class="msg">左边是一个商品分类，点击可跳转到相应种类。中间是一个轮播图</div>
     </div>
     <div class="pic" style="background:url(img/5.png) no-repeat;background-size:contain"></div>
     <div class="info">
