--- a/Tai_ji/index.html
+++ b/Tai_ji/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>太极</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
