--- a/vue/index.html
+++ b/vue/index.html
@@ -9,29 +9,23 @@
     </style>
 </head>
 <body>
-    <div id="app">
-        <input type="radio" v-model="picked" :value="msg">{{picked}}<hr>
-        <input type="checkbox" v-model="toggle" :true-value="value1" :false-value="value2">
-        <hr>
-        下拉框<br>
-        <select v-model='valueselect'>
-            <option :value="{age:18}">xixi</option>
-        </select>
-        {{valueselect.age}}
+    <div id="app">        
+        <app-components msg='这是来自父组件的消息'></app-components>       
     </div> 
-    
 </body>
 <script>
+Vue.component('my-component',{
+    template:'<div>我是一个全局组件</div>'
+})
+
     var app = new Vue({
         el: '#app',
-        data: {
-            picked:'',
-            msg:'12131',
-            toggle: '',
-            value1: 'cb',
-            value2: 'wl',
-            valueselect:''
-        },    
+        components:{
+             'app-components':{
+                 props:['msg'],
+                 template:'<div>{{msg}}</div>'
+             }
+        },
     })
 </script>
 </html>
